# 5eBook

./: README.md  run
api/: .env  Cargo.toml  players
api/migrations/2022-08-19-023223_create_user/: down.sql  up.sql
api/migrations/2022-08-20-182038_create_user/: down.sql  up.sql
api/migrations/2022-08-20-183202_create_player/: down.sql  up.sql
api/src/: api_error.rs  db.rs  main.rs  player_routes.rs  schema.rs
api/src/models/: alignment.rs  background.rs  class.rs  mod.rs  player.rs  race.rs  user.rs
api/src/routes/: mod.rs  player_routes.rs  user_routes.rs
models/: Cargo.toml
models/src/: lib.rs  modifier.rs  player_skill.rs  skill.rs
web/: Cargo.toml
web/src/: api_caller.rs  login.rs  main.rs
web/src/api/: api_caller.rs  mod.rs  user_api.rs
web/src/models/: login.rs
web/src/routes/: character.rs  create_user.rs  login.rs  mod.rs
