[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16.0"
yew-hooks = "0.1.56"
yewdux = "0.8"
log = "0.4.6"
wasm-logger = "0.2.0"
web-sys = "0.3.59"
tokio = { version = "0.2.22", features = ["macros"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
